--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+	<title>Augustine Science</title>
 
+	<style>
+		* {
+			box-sizing: border-box;
+			margin: 0;
+			padding: 0;
+		}
+		html, body {
+			width: 100%;
+			height: 100%;
+		}
+		body {
+			overflow-x: hidden;
+			font-family: 'Noto Sans JP', sans-serif;
+		}
+		header {
+			background-color: #024127;
+			color: #fff;
+			padding: 8px 16px;
+		}
+		header h1 {
+			font-size: 48px;
+			text-align: center;
+			margin: 10px 0;
+		}
+		.btn-container {
+			margin-top: 16px;
+			text-align: center;
+			padding: 0 8px;
+		}
+		.btn-wrapper {
+			padding: 0 8px;
+			width: 33.33333%;
+			float: left;
+		}
+		.btn-inner {
+			box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+			padding: 1em 16px;
+			cursor: pointer;
+			transition: all 0.3s;
+		}
+		.btn-inner:hover {
+			box-shadow: 0 7px 10px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+			background-color: #eee;
+		}
+		.btn-inner svg {
+			width: 100px;
+			height: 100px;
+		}
+
+		@media(max-width: 775px) {
+			.btn-wrapper {
+				width: 100%;
+				padding-bottom: 1em;
+			}
+		}
+	</style>
+</head>
+<body>
+
+	<header>
+		<h1>Augustine Science</h1>
+	</header>
+
+	<div class="btn-container">
+		<div class="btn-wrapper">
+			<div class="btn-inner" data-url="inventory">
+				<svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#024127" d="M624 0h-32c-8.8 0-16 7.2-16 16v144H64V16c0-8.8-7.2-16-16-16H16C7.2 0 0 7.2 0 16v496h64v-32h512v32h64V16c0-8.8-7.2-16-16-16zm-48 416H64V224h512v192zM368 128h96c8.8 0 16-7.2 16-16V16c0-8.8-7.2-16-16-16h-96c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16zM112 384h96c8.8 0 16-7.2 16-16v-96c0-8.8-7.2-16-16-16h-96c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16zm160 0h96c8.8 0 16-7.2 16-16v-96c0-8.8-7.2-16-16-16h-96c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16z"></path></svg>
+				<h1>Inventory Manager</h1>
+			</div>
+		</div>
+		<div class="btn-wrapper">
+			<div class="btn-inner" data-url="courses">
+				<svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="#024127" d="M575.11 443.25L461.51 19.06C458.2 6.7 445.61-3.18 430.15.96L414.7 5.1c-6.18 1.66-11.53 6.4-16.06 14.24-14.03 6.94-52.3 17.21-68 18.22-7.84-4.53-14.85-5.96-21.03-4.3l-15.46 4.14c-2.42.65-4.2 1.95-6.15 3.08V32c0-17.67-14.33-32-32-32h-64c-17.67 0-32 14.33-32 32v64h128l101.66 396.94c3.31 12.36 15.9 22.24 31.36 18.1l15.45-4.14c6.18-1.66 11.53-6.4 16.06-14.24 13.91-6.88 52.18-17.2 68-18.22 7.84 4.53 14.85 5.96 21.03 4.3l15.46-4.14c15.45-4.14 21.41-18.99 18.09-31.35zm-134.4-7.06L348.64 92.37l61.82-16.56 92.07 343.82-61.82 16.56zM0 384h128V128H0v256zM96 0H32C14.33 0 0 14.33 0 32v64h128V32c0-17.67-14.33-32-32-32zM0 480c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-64H0v64zm160-96h128V128H160v256zm0 96c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-64H160v64z"></path></svg>
+				<h1>Courses</h1>
+			</div>
+		</div>
+		<div class="btn-wrapper">
+			<div class="btn-inner disabled" data-url="projects">
+				<svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#024127" d="M384 320H256c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V352c0-17.67-14.33-32-32-32zM192 32c0-17.67-14.33-32-32-32H32C14.33 0 0 14.33 0 32v128c0 17.67 14.33 32 32 32h95.72l73.16 128.04C211.98 300.98 232.4 288 256 288h.28L192 175.51V128h224V64H192V32zM608 0H480c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V32c0-17.67-14.33-32-32-32z"></path></svg>
+				<h1>Current Projects</h1>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
+
+	<!-- TODO: Add SDKs for Firebase products that you want to use
+	     https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-firestore.js"></script>
+
+	<script>
+	  // Your web app's Firebase configuration
+	  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+	  var firebaseConfig = {
+	    apiKey: "AIzaSyB3hXShuLgBDL0Hr031DBI4I1ccrGWRsDU",
+	    authDomain: "augustine-science.firebaseapp.com",
+	    projectId: "augustine-science",
+	    storageBucket: "augustine-science.appspot.com",
+	    messagingSenderId: "823855848050",
+	    appId: "1:823855848050:web:02bffa7def49ac730200eb",
+	    measurementId: "G-6M940LDYP6"
+	  };
+	  // Initialize Firebase
+	  firebase.initializeApp(firebaseConfig);
+	  firebase.analytics();
+
+	  document.querySelectorAll('.btn-inner').forEach(function(elem) {
+	  	elem.addEventListener('click', function(e) {
+	  		if(!elem.classList.contains('disabled')) window.location = elem.getAttribute('data-url');
+	  	});
+	  });
+	</script>
+</body>
+</html>
